--- a/Homework Notebooks/Errors and Exceptions Homework.ipynb
+++ b/Homework Notebooks/Errors and Exceptions Homework.ipynb
@@ -82,7 +82,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def ask():\n",
@@ -142,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
